# AudioCodecTest

./: CMakeLists.txt  Makefile  README.md  code.c
libgsm/: CMakeLists.txt  libgsm.c  libgsm.h
libgsm/inc/: config.h
libspeex/: CMakeLists.txt  config.h  libspeex.c  libspeex.h
